--- a/sorting.html
+++ b/sorting.html
@@ -6,12 +6,12 @@
       <title>SORTING</title>
       <link rel="icon" href="Images/VISUAL-ALGO.png" type="image/x-icon">
       <script src = "sortingscript.js" ></script>
-      <link rel="stylesheet" href="C:/Users/DELL/OneDrive/Documents/Folder1/ALGORITHM VISUALISER/TEMP-PROJECT/css/bootstrap.min.css">
-      <link rel="stylesheet" type="text/css" href="C:/Users/DELL/OneDrive/Documents/Folder1/ALGORITHM VISUALISER/TEMP-PROJECT/css/stylesheet.css">
-      <link rel="stylesheet" type="text/css" href="C:/Users/DELL/OneDrive/Documents/Folder1/ALGORITHM VISUALISER/TEMP-PROJECT/css/common-1.0.0.css">
-      <link rel="stylesheet" href="C:/Users/DELL/OneDrive/Documents/Folder1/ALGORITHM VISUALISER/TEMP-PROJECT/css/viz-1.0.3.css">
-      <link rel="stylesheet" href="C:/Users/DELL/OneDrive/Documents/Folder1/ALGORITHM VISUALISER/TEMP-PROJECT/css/visual.css">
-      <link rel="stylesheet" href="C:/Users/DELL/OneDrive/Documents/Folder1/ALGORITHM VISUALISER/TEMP-PROJECT/css/drawgraph-1.0.0.css">
+      <link rel="stylesheet" href="css/bootstrap.min.css">
+      <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
+      <link rel="stylesheet" type="text/css" href="css/common-1.0.0.css">
+      <link rel="stylesheet" href="css/viz-1.0.3.css">
+      <link rel="stylesheet" href="css/visual.css">
+      <link rel="stylesheet" href="css/drawgraph-1.0.0.css">
   </head>
 
   <body>
